fix(api): moved getLineage param to query
